Fix modal issues on different screen sizes
- Fix bug with compact modals going beyond the top of the screen.
- Reduce horizontal padding to reduce risk of icons overlapping
  with the text within buttons in the confirmation modals.

--- a/src/components/modal/Modal.css
+++ b/src/components/modal/Modal.css
@@ -12,5 +12,5 @@
 .Modal.Modal-compact {
   top: 50%;
   bottom: inherit;
-  transform: translateY(-70%);
+  transform: translateY(-50%);
 }
